# nom-pdb

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  bad_design.md  o.txt
.github/workflows/: ci-workflow.yml
assets/: 1a8o.json  7znf.json  README.md
benches/: read.rs
examples/: 1a8o.rs  4f7i.rs  read.rs
scripts/modres/: ambiguous-analysis.py  ambiguous.json  modres.json  modres.py  modres.rs  processed.json  torust.py
src/: aux.rs  common.rs  complete.rs  connectivity.rs  coordinate.rs  crystallography.rs  het.rs  lib.rs  main.rs  parserbuilder.rs  parts.rs  primary_structure.rs  remark.rs  secondary_structure.rs  title_section.rs  types.rs  utils.rs
src/common/: error.rs  parser.rs  types.rs
src/common/types/: non_standard_aa.rs
src/coordinate/: anisou.rs  atom.rs  conect.rs  hetatom.rs
src/crystallography/: cryst1.rs  scale.rs
src/partial/: seq.rs
src/parts/: crystallography.rs
src/parts/crystallography/: cryst1.rs
src/parts/title/: author.rs  header.rs  obslete.rs
src/primary_structure/: modres.rs  seqres.rs
src/remark/: remark2.rs
src/secondary_structure/: helix.rs  sheet.rs
src/title_section/: author.rs  expdta.rs  header.rs  keywords.rs  obslte.rs  title.rs
tests/: read.rs
