[package]
name = "nom-pdb"
version = "0.1.0"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"
keywords = ["bioinformatics", "protein", "parser","nom", "pdb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
chrono = {version = "0.4", features = ["serde"]}
#itertools = "0.8"
#memmap = "0.7"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"