[package]
name = "nom-pdb"
version = "0.0.6"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"
keywords = ["bioinformatics", "protein", "parser","nom", "pdb"]
license = "MIT"
repository = "https://github.com/TianyiShi2001/nom-pdb"
description = "PDB parser implemented with nom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
chrono = {version = "0.4", features = ["serde"]}
#itertools = "0.8"
#memmap = "0.7"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protein-core = "0.1.5"
# protein-core = {path = "/home/tianyi/Github/protein/protein-core"}
atoi = "0.3.2"